Delete Duplicate Storyboard

--- a/init.engineer-iOS-App/View/Base.lproj/IndexView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/IndexView.storyboard
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dmE-e9-gNw">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,7 +18,7 @@
             <objects>
                 <viewController id="dmE-e9-gNw" customClass="IndexTabController" customModule="純靠北工程師" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0jz-nh-ysL">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首頁 Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ar-FU-LEh">
@@ -26,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bhl-Nt-beD">
-                                <rect key="frame" x="20" y="91" width="177" height="341"/>
+                                <rect key="frame" x="20" y="91" width="177" height="365.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kohlrabi" translatesAutoresizingMaskIntoConstraints="NO" id="ilb-w5-0Ux">
                                         <rect key="frame" x="0.0" y="0.0" width="177" height="94.5"/>
@@ -35,7 +37,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="hYX-Er-n8g">
-                                        <rect key="frame" x="28.5" y="141" width="120" height="59.5"/>
+                                        <rect key="frame" x="28.5" y="153" width="120" height="59.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="大頭菜計算器" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-DO-gK8">
                                                 <rect key="frame" x="0.0" y="0.0" width="120" height="22.5"/>
@@ -55,7 +57,7 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSX-xe-2TW">
-                                        <rect key="frame" x="46" y="302" width="85" height="31"/>
+                                        <rect key="frame" x="46" y="326.5" width="85" height="31"/>
                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
                                         <state key="normal" title="點我發大財">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -77,7 +79,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bP3-Yh-EqA">
-                                <rect key="frame" x="217" y="91" width="177" height="341"/>
+                                <rect key="frame" x="217" y="91" width="177" height="365.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_flag1" translatesAutoresizingMaskIntoConstraints="NO" id="pok-Q8-Orh">
                                         <rect key="frame" x="0.0" y="0.0" width="177" height="94.5"/>
@@ -86,7 +88,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYW-bl-9NP">
-                                        <rect key="frame" x="71.5" y="302" width="34" height="31"/>
+                                        <rect key="frame" x="71.5" y="326.5" width="34" height="31"/>
                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
                                         <state key="normal" title="我吸">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -96,7 +98,7 @@
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="4YL-Nn-ZDc">
-                                        <rect key="frame" x="9" y="141" width="159" height="59.5"/>
+                                        <rect key="frame" x="9" y="153" width="159" height="59.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Facebook 粉絲頁" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKg-4C-mB1">
                                                 <rect key="frame" x="0.0" y="0.0" width="159" height="22.5"/>
@@ -128,7 +130,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hBs-bo-Pu4">
-                                <rect key="frame" x="20" y="452" width="177" height="341"/>
+                                <rect key="frame" x="20" y="476.5" width="177" height="365.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_twitter" translatesAutoresizingMaskIntoConstraints="NO" id="Aph-uD-YCa">
                                         <rect key="frame" x="0.0" y="0.0" width="177" height="94.5"/>
@@ -137,7 +139,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HdC-wN-v3I">
-                                        <rect key="frame" x="71.5" y="302" width="34" height="31"/>
+                                        <rect key="frame" x="71.5" y="326.5" width="34" height="31"/>
                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
                                         <state key="normal" title="吸吸">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,7 +149,7 @@
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Q9n-W4-fzV">
-                                        <rect key="frame" x="14.5" y="141" width="148" height="59.5"/>
+                                        <rect key="frame" x="14.5" y="153" width="148" height="59.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Twitter 粉絲頁" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDB-Bh-q4t">
                                                 <rect key="frame" x="0.0" y="0.0" width="148" height="22.5"/>
@@ -180,7 +182,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MOZ-MG-QjJ">
-                                <rect key="frame" x="217" y="452" width="177" height="341"/>
+                                <rect key="frame" x="217" y="476.5" width="177" height="365.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_plurk" translatesAutoresizingMaskIntoConstraints="NO" id="BYK-Lo-0x1">
                                         <rect key="frame" x="0.0" y="0.0" width="177" height="94.5"/>
@@ -189,7 +191,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KK-nF-7xG">
-                                        <rect key="frame" x="71.5" y="302" width="34" height="31"/>
+                                        <rect key="frame" x="71.5" y="326.5" width="34" height="31"/>
                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
                                         <state key="normal" title="吸爆">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -199,7 +201,7 @@
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="vkZ-ST-x1A">
-                                        <rect key="frame" x="25.5" y="141" width="126" height="59.5"/>
+                                        <rect key="frame" x="25.5" y="153" width="126" height="59.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Plurk 粉絲頁" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6R-4T-E7z">
                                                 <rect key="frame" x="0.0" y="0.0" width="126" height="22.5"/>
