--- a/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
@@ -363,7 +363,7 @@
         <scene sceneID="QdW-h9-8AF">
             <objects>
                 <navigationController id="mOY-C4-phr" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="文章列表" id="FqJ-hO-lJb"/>
+                    <tabBarItem key="tabBarItem" title="文章列表" image="baseline_dashboard_black_24pt" landscapeImage="baseline_dashboard_black_18pt" id="FqJ-hO-lJb"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OkH-Nt-rDT">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -378,6 +378,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="baseline_dashboard_black_18pt" width="18" height="18"/>
+        <image name="baseline_dashboard_black_24pt" width="24" height="24"/>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
