--- a/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -23,56 +22,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章列表 Article list" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5y-du-l9j">
-                                <rect key="frame" x="112" y="108" width="190" height="19"/>
-                                <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oWL-7i-Kx2">
-                                <rect key="frame" x="20" y="135" width="374" height="707"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cbh-g0-8cb">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="iCQ-xO-zgD" customClass="ArticleCell" customModule="純靠北工程師" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Qmk-J8-SiH">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                        <connections>
-                                            <segue destination="GSj-ts-Dua" kind="show" id="Xhw-Yv-HFO"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ybK-Kw-WUX">
+                                <rect key="frame" x="20" y="100" width="374" height="762"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.13333499430000001" green="0.13333114979999999" blue="0.13333195449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="oWL-7i-Kx2" firstAttribute="top" secondItem="G5y-du-l9j" secondAttribute="bottom" constant="8" id="52O-e6-XwA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oWL-7i-Kx2" secondAttribute="bottom" constant="20" id="CPr-oE-Z00"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oWL-7i-Kx2" secondAttribute="trailing" constant="20" id="aVb-Fs-7Bc"/>
-                            <constraint firstItem="G5y-du-l9j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nfM-0Y-bt4"/>
-                            <constraint firstItem="G5y-du-l9j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="o7y-VN-Ekz"/>
-                            <constraint firstItem="oWL-7i-Kx2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="x6j-1x-t3L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ybK-Kw-WUX" secondAttribute="bottom" id="O2G-2t-l7C"/>
+                            <constraint firstItem="ybK-Kw-WUX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YUI-QM-PLc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ybK-Kw-WUX" secondAttribute="trailing" constant="20" id="pGU-Lt-fmG"/>
+                            <constraint firstItem="ybK-Kw-WUX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="sSb-aG-2OI"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="文章列表" id="R9B-7x-joA"/>
                     <navigationItem key="navigationItem" id="Iz0-QP-aCe"/>
                     <connections>
-                        <outlet property="articleList" destination="oWL-7i-Kx2" id="hHd-1j-Xwu"/>
+                        <outlet property="articleTable" destination="ybK-Kw-WUX" id="k8l-C2-Wgj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130" y="1209"/>
+            <point key="canvasLocation" x="128.98550724637681" y="1208.7053571428571"/>
         </scene>
         <!--Article View Controller-->
         <scene sceneID="lSS-o1-fjD">
@@ -83,7 +56,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章 Article" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRe-3x-m42">
-                                <rect key="frame" x="152.5" y="108" width="109" height="19"/>
+                                <rect key="frame" x="152.5" y="64" width="109" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="19" id="lB3-3K-uYc"/>
                                 </constraints>
@@ -92,10 +65,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V0Y-Xk-47X">
-                                <rect key="frame" x="20" y="135" width="374" height="261.5"/>
+                                <rect key="frame" x="20" y="91" width="374" height="305.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PUk-iF-u1O">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="261.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="305.5"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
