Update font constants prevent duplicate article fetch fix issue relate to reusing cells <- keep adding new views

--- a/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mOY-C4-phr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mOY-C4-phr">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -41,6 +41,7 @@
                     <navigationItem key="navigationItem" id="Iz0-QP-aCe"/>
                     <connections>
                         <outlet property="articleTable" destination="ybK-Kw-WUX" id="k8l-C2-Wgj"/>
+                        <segue destination="GSj-ts-Dua" kind="show" id="T4K-ER-cb9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -56,7 +57,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章 Article" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRe-3x-m42">
-                                <rect key="frame" x="152.5" y="64" width="109" height="19"/>
+                                <rect key="frame" x="152.5" y="108" width="109" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="19" id="lB3-3K-uYc"/>
                                 </constraints>
@@ -65,10 +66,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V0Y-Xk-47X">
-                                <rect key="frame" x="20" y="91" width="374" height="305.5"/>
+                                <rect key="frame" x="20" y="135" width="374" height="261.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PUk-iF-u1O">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="305.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="261.5"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
