--- a/init.engineer-iOS-App/View/Base.lproj/ReviewView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/ReviewView.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K0k-qp-VNL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K0k-qp-VNL">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,17 +16,30 @@
                     <view key="view" contentMode="scaleToFill" id="yEP-N6-TZR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wQM-ub-tvo">
+                                <rect key="frame" x="20" y="108" width="374" height="754"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="rxH-Oj-10V"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.1483450234" green="0.14836204049999999" blue="0.14833080770000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rxH-Oj-10V" firstAttribute="trailing" secondItem="wQM-ub-tvo" secondAttribute="trailing" constant="20" id="HTd-6c-s3j"/>
+                            <constraint firstItem="wQM-ub-tvo" firstAttribute="leading" secondItem="rxH-Oj-10V" secondAttribute="leading" constant="20" id="TSN-Bo-Ezp"/>
+                            <constraint firstItem="wQM-ub-tvo" firstAttribute="top" secondItem="rxH-Oj-10V" secondAttribute="top" constant="20" id="Vvd-Yb-lTs"/>
+                            <constraint firstItem="rxH-Oj-10V" firstAttribute="bottom" secondItem="wQM-ub-tvo" secondAttribute="bottom" id="YT9-wI-SFY"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xJ8-HZ-Vai"/>
                     <connections>
+                        <outlet property="reviewTable" destination="wQM-ub-tvo" id="HkF-ZH-fEO"/>
                         <segue destination="fN6-oe-E6S" kind="show" identifier="ReviewToLogin" id="rEv-5I-Eiq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Aj-tR-HFF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1247.8260869565217" y="-626.11607142857144"/>
+            <point key="canvasLocation" x="1246.376811594203" y="-626.11607142857144"/>
         </scene>
         <!--LoginView-->
         <scene sceneID="LxL-xo-3WY">
