Add interstitial ads Add cell delegate for customizing cell click to it enable pre-fetching new review list prevent for fetching and appending empty list for article list and review list

--- a/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/ArticleView.storyboard
@@ -41,7 +41,7 @@
                     <navigationItem key="navigationItem" id="Iz0-QP-aCe"/>
                     <connections>
                         <outlet property="articleTable" destination="ybK-Kw-WUX" id="k8l-C2-Wgj"/>
-                        <segue destination="GSj-ts-Dua" kind="show" id="T4K-ER-cb9"/>
+                        <segue destination="GSj-ts-Dua" kind="show" identifier="ToArticleDetails" id="T4K-ER-cb9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
